2011-10-04  Hendrik Tews <prooftree@askra.de>

	* release version 0.6 on 2011-10-04 10:26:05 UTC

2011-10-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* make-bundle fix

2011-10-04  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-09-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* simplify state numbers

2011-09-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix bug of not properly deleted proof tree windows and
	  structures

2011-09-15  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix a current node position bug
	* some more doc strings

2011-08-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix to delete external node windows when retracting
	* improve handling of orphaned node windows

2011-08-11  Hendrik Tews <prooftree@askra.de>

	* release version 0.5 on 2011-08-11 13:53:56 UTC

2011-08-11  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small fix

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* changes towards release

2011-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* man page

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* treat common config file errors

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* sequent tooltips and more tool tip config

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change default colors
	* show current menu item
	* improve help

2011-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve makefile and configure

2011-08-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* tooltips with complete proof command

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* external node window height configurable

2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* initial size of sequent window configurable

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve save button

2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
