@@ -65,6 +65,9 @@ man page added</LI>
 <LI>several fixes and small changes<P></P>
 </LI>
 </UL>
+
+<!-- RECENT CHANGES END -->
+
 <DT>2011-06-14
 <DD>
 <UL>
@@ -82,9 +85,6 @@ complete proof command on mouse button 2
 point before the proof
 <P></P></LI>
 </UL>
-
-<!-- RECENT CHANGES END -->
-
 <DT>2011-04-21
 <DD>
 <UL>
