@@ -1,3 +1,7 @@
+2011-10-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* move recent-changes marker in sync with website
+
 2011-10-04  Hendrik Tews <prooftree@askra.de>
 
 	* release version 0.6 on 2011-10-04 10:26:05 UTC
